--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.telran'
+group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -18,9 +18,40 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
     implementation 'ch.qos.logback:logback-classic:1.2.8'
-
 }
 
 test {
     useTestNG()
+}
+
+task qa36(type :Test){
+    useTestNG(){
+
+        def groups = System.getProperty('groups')
+        if (groups != null) {
+            includeGroups groups
+        }
+
+        suites 'src/test/resources/testnew.xml'
+    }
+}
+
+task qa(type :Test){
+    useTestNG(){
+
+        def suite = System.getProperty('suite', '')
+
+        if (suite.equals('quick')) {
+            suites 'src/test/resources/quick.xml'
+        } else if (suite.equals('smoke')) {
+            suites 'src/test/resources/smoke.xml'
+        } else {
+            suites 'src/test/resources/testng.xml'
+        }
+
+    }
+
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
 }
